# COM-2024-remote-control-sw

./: .gitignore  CMakeLists.txt  doxyfile  remote-main.cpp
include/: remote.hpp
modules/hardware_interface/: CMakeLists.txt
modules/hardware_interface/include/: hardware_interface.hpp  xinput_messages.hpp
modules/hardware_interface/src/: hardware_interface.cpp
modules/hardware_interface/test/: test.cpp
modules/network/: CMakeLists.txt
modules/network/include/: net.hpp
modules/network/src/: net.cpp
modules/network/test/: test.cpp
modules/processing/: CMakeLists.txt
modules/processing/include/: can_payload.hpp  processing.hpp
modules/processing/src/: processing.cpp
modules/processing/test/: test.cpp
src/: remote-main.cpp  remote.cpp
